<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color1"
    tools:context=".activities.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <!--header-->
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:tint="@color/tint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about"
                android:textColor="@color/text_color"
                android:textSize="25sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLay_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/app_icon"
                        app:tint="@color/tint_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/text_color"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/versionName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Version 1.0.0"
                        android:textColor="?attr/text_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/linearLay_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLay_1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="40dp"
                    app:cardElevation="15dp">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="-20dp"
                        android:layout_marginBottom="-40dp"
                        android:alpha="0.5"
                        android:src="@drawable/ic_info"
                        app:tint="?attr/background_color" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="-5dp"
                        android:layout_marginTop="-40dp"
                        android:alpha="0.5"
                        android:src="@drawable/ic_info"
                        app:tint="?attr/background_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp">

                            <ImageView
                                android:id="@+id/ivImg1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_company"
                                app:tint="?attr/background_color" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="30dp"
                                android:layout_toEndOf="@+id/ivImg1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/company_title"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    style="@style/TextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/company_name"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="15sp" />

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/ivImg2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_email"
                                app:tint="?attr/background_color" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="30dp"
                                android:layout_toEndOf="@+id/ivImg2"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/email_title"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    style="@style/TextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/company_email"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="15sp" />

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/ivImg3"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_contact"
                                app:tint="?attr/background_color" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="30dp"
                                android:layout_toEndOf="@+id/ivImg3"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/contact"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    style="@style/TextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/skype_id"
                                    android:textColor="?attr/text_color_1"
                                    android:textSize="15sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <include layout="@layout/banner_ad_lay" />

</RelativeLayout>